styles/components/Slideshow.module.scss
@import "../../theme/theme";

@media (min-width: 799px) {
.slideshow_container { 
  position: absolute;
  height: calc(100% - 100px); 
  width: 100vw; 
  overflow-y: hidden; 
  overflow-x: hidden; 
  background-color: $light 
}
  .slideshow_body {
    position: relative;
    width: 100%;
    height: 100%;
  }
    .slideshow_image_container {
      position: relative;
      width: 100%;
      height: calc(100% - 80px);
      background-color: $dark;
    }
      .slideshow_image {
        position: relative;
        width: 100%;
        height: calc(100% - 80px);
      }

    .slideshow_menu_container {
      display: flex;
      flex-direction: row;
      width: 100%;
      min-height: 80px; 
      max-height: 80px;
      padding: 15px 20px; 
      color: $light;
      background-color: $primary;
    }
      .slideshow_menu_left_container {
        width: 260px !important;
        display: flex;
        justify-content: left;
        align-items: center;
      }
      .slideshow_menu_title_container {
        width: calc(100vw - 260px);
        display: flex;
        justify-content: left;
      }

        .slideshow_menu_title {
          padding: 0px 10px 0px 5px;
          font-size: 50px !important;
          line-height: 1;
        }

      .slideshow_icon {
        font-size: 50px !important;
        background-color: $dark;
        padding: 10px;
        margin-right: 10px;
        border-radius: 5px;
      }
      .slideshow_icon:hover {
        background-color: $light;
        fill: $dark;
      } 

    .speed_menu {
      position: absolute;
      bottom: 80px;
      left: 0px;
      width: fit-content;
      height: 50px;
      line-height: 1;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 10px;
      background-color: $primary;
      border-top-right-radius: 5px;
      border-top: 2px solid $secondary;
      border-right: 2px solid $secondary;
    }
      .speed_slider{
        -webkit-appearance: none;
        background-color: $light;
        width: 250px;
        height:10px;
        border-radius: 5px;
      }
      
      .speed_slider::-webkit-slider-thumb {
        -webkit-appearance: none;
        background-color: $secondary;
        width: 30px;
        height: 30px;
        border-radius: 30px;
        border: 1px solid $light;
      }
}

@media (max-width: 800px) {
  .slideshow_container { 
    position: absolute;
    height: calc(100% - 100px); 
    width: 100vw; 
    overflow-y: hidden; 
    overflow-x: hidden; 
    background-color: $light 
  }
    .slideshow_body {
      position: relative;
      width: 100%;
      height: 100%;
    }
      .slideshow_image_container {
        position: relative;
        width: 100%;
        height: calc(100% - 50px);
        background-color: $dark;
      }
        .slideshow_image {
          position: relative;
          width: 100%;
          height: calc(100% - 50px);
        }
        
    .slideshow_menu_container {
      display: flex;
      flex-direction: row;
      width: 100%;
      min-height: 50px; 
      max-height: 50px;
      padding: 10px 10px; 
      color: $light;
      background-color: $primary;
    }
      .slideshow_menu_left_container {
        display: flex;
        align-items: center;
        width: fit-content;
      }
      .slideshow_menu_title_container {
        width: calc(100vw - 135px);
      }
        .slideshow_menu_title {
          width: calc(100vw - 135px);
          height: 30px;
          display: flex;
          justify-content: left;
          padding: 0px 10px 0px 5px;
          font-size: 20px !important;
          line-height: 30px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }

      .slideshow_icon {
        font-size: 30px !important;
        background-color: $dark;
        padding: 5px;
        margin-right: 10px;
        border-radius: 5px;
      }

    .speed_menu {
      position: absolute;
      bottom: 50px;
      left: 0px;
      width: fit-content;
      height: 40px; 
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 10px;
      background-color: $primary;
      border-top-right-radius: 5px;
      border-top: 2px solid $secondary;
      border-right: 2px solid $secondary;
    }
      .speed_slider{
        -webkit-appearance: none;
        background-color: $light;
        width: 200px;
        height:10px;
        border-radius: 5px;
      }
      
      .speed_slider::-webkit-slider-thumb {
        -webkit-appearance: none;
        background-color: $secondary;
        width: 30px;
        height: 30px;
        border-radius: 30px;
        border: 1px solid $light;
      }
}

.img_hor_vert {
  -webkit-transform: scale(-1);
  -ms-transform: scale(-1);
      transform: scale(-1);
}

